tests/errors/wrong-args-self.au
struct A{}

func (self: A) fn() {
    fn(1,2,3);
}